--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
           <button
             class="inline-flex text-white bg-orange-500 border-0 py-2 px-6 focus:outline-none hover:bg-orange-600 rounded text-lg"
-            onClick="location.href='https://github.com/francisc-hub'" type="button">Projects</button>
+            onClick="location.href='https://github.com/floriancomparato'" type="button">Projects</button>
           <button
             class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"
             onClick="location.href='FlorianComparatoCV.pdf'" download="Cv-florian-comparato-web-dev">CV.pdf</button>
