--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
           <br class="hidden lg:inline-block"> Fullstack JavaScript
         </h1>
         <p class="mb-8 leading-relaxed">
-          <br> Stack MERN Mobile & WebApps </p>
+          <br> Diplomé d'un bootcamp 100% JavaScript,<br /> en apprentissage constant & <br /> passionné de nouvelles
+          technologies.</p>
         <div class="flex justify-center">
 
           <button
             class="inline-flex text-white bg-orange-500 border-0 py-2 px-6 focus:outline-none hover:bg-orange-600 rounded text-lg"
-            onClick="location.href='https://github.com/floriancomparato/'" type="button">Projects</button>
+            onClick="location.href='https://github.com/floriancomparato/'" type="button">Dépots Git</button>
           <button
             class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"
             onClick="location.href='FlorianComparatoCV.pdf'" download="Cv-florian-comparato-web-dev">CV.pdf</button>
@@ -37,7 +38,7 @@
 
   <!--SKILLS SECTION-->
   <section class="text-gray-500 bg-gray-900 body-font">
-    <h2 class="text-center tracking-widest text-xl title-font font-medium text-white mb-1">SKILLS
+    <h2 class="text-center tracking-widest text-xl title-font font-medium text-white mb-1">MES COMPÉTENCES
     </h2>
 
     <div class="container px-5 py-24 mx-auto">
@@ -46,10 +47,11 @@
           <div class="h-full flex items-start">
 
             <div class="flex-grow pl-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1">WEB DEV</h2>
+              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1">DÉVELOPPEMENT WEB</h2>
 
-              <p class="leading-relaxed mb-5">JavaScript <br> HTML <br> CSS <br> Git <br> UI/UX <br> Figma <br> Methode
-                Agile: Scrum</p>
+              <p class="leading-relaxed mb-5">JavaScript <br> HTML 5 <br> CSS 3 <br> Git <br> UI/UX <br> Figma <br>
+                Méthode
+                Agile: Scrum (Trello, Slack, Discord)</p>
 
             </div>
           </div>
@@ -58,10 +60,10 @@
           <div class="h-full flex items-start">
 
             <div class="flex-grow pl-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1">FRAMEWORKS / LIBRARIES
+              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1">FRAMEWORKS / LIBRAIRIES
               </h2>
 
-              <p class="leading-relaxed mb-5">Reactjs / React-Native / Vue.js <br> jQuery <br> Bootstrap <br>
+              <p class="leading-relaxed mb-5">Reactjs / React-Native / Vue.js <br> jQuery <br> Ajax <br> Bootstrap <br>
                 Tailwindcss</p>
 
             </div>
@@ -83,6 +85,131 @@
     </div>
     </div>
     </div>
+  </section>
+  <!--REAL SECTION-->
+  <section class="text-gray-500 bg-gray-900 body-font">
+    <div class="container px-5 py-24 mx-auto flex flex-wrap">
+      <div class="flex flex-col text-center w-full mb-20">
+        <h2 class="text-center tracking-widest text-xl title-font font-medium text-white mb-1">MES PROJETS
+        </h2>
+        <br />
+        <br />
+        <br />
+        <br />
+        <div class="flex flex-wrap -m-4">
+          <!--CARD 1-->
+          <div class="p-4 md:w-1/3">
+            <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+              <div class="flex items-center mb-3">
+                <div
+                  class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                    <path d="M0 0h24v24H0V0z" fill="none" />
+                    <path
+                      d="M4 7c0-.55.45-1 1-1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-1.1 0-2 .9-2 2v11h-.5c-.83 0-1.5.67-1.5 1.5S.67 20 1.5 20H14v-3H4V7zm19 1h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z" />
+                  </svg>
+                </div>
+                <h2 class="text-white text-lg title-font font-medium">Cannes is up</h2>
+              </div>
+              <div class="flex-grow">
+                <p class="leading-relaxed text-base">Réalisation en 3 sprints d'un annuaire d'adhérents avec Searchbar,
+                  Formulaire d'adhésion, Login & Back-office pour l'association CANNESISUP: <br /><br />
+                  <hr />
+                  <br />
+                <ul>
+                  <li>Méthode Agile: Scrum</li> <br />
+                  <li>Stack: MERN</li> <br />
+                  <li>Bcrypt / JWT / Multer / Nodemailer / React-Bootstrap</li>
+                  <br />
+                </ul>
+                </p>
+                <a class="mt-3 text-orange-500 inline-flex items-center"
+                  href="https://github.com/floriancomparato/">Voir
+                  le Code
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!--CARD 2-->
+          <div class="p-4 md:w-1/3">
+            <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+              <div class="flex items-center mb-3">
+                <div
+                  class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                    <path
+                      d="M21 2H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h7v2H9c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1h-1v-2h7c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 14H4c-.55 0-1-.45-1-1V5c0-.55.45-1 1-1h16c.55 0 1 .45 1 1v10c0 .55-.45 1-1 1z" />
+                  </svg>
+                </div>
+                <h2 class="text-white text-lg title-font font-medium">TagHub</h2>
+              </div>
+              <div class="flex-grow">
+                <p class="leading-relaxed text-base">1ère Réalisation d'un mini réseau social: <br /><br />
+                  <hr />
+                  <br />
+                <ul>
+                  <li>Stack: MERN</li> <br />
+                  <li>React-Bootstrap</li>
+                  <br />
+                </ul>
+                </p>
+                <a class="mt-3 text-orange-500 inline-flex items-center"
+                  href="https://github.com/floriancomparato/">Voir
+                  le Code
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!--CARD 3-->
+          <div class="p-4 md:w-1/3">
+            <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+              <div class="flex items-center mb-3">
+                <div
+                  class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                    <path d="M0 0h24v24H0V0z" fill="none" />
+                    <path
+                      d="M17 1.01L7 1c-1.1 0-1.99.9-1.99 2v18c0 1.1.89 2 1.99 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z" />
+                  </svg>
+                </div>
+                <h2 class="text-white text-lg title-font font-medium">Give me a &lt;br &frasl;&gt;
+                </h2>
+              </div>
+              <div class="flex-grow">
+                <p class="leading-relaxed text-base">Réalisation en 2 jours d'une application mobile React-native de
+                  blagues de développeurs: <br /><br />
+                  <hr />
+                  <br />
+                <ul>
+                  <li>React-native</li><br />
+                  <li>Requêtes vers une API web (JokeAPI)</li><br />
+                  <li>Soumettre des blagues à l'API</li><br />
+                  <li>Splashscreen</li><br />
+                  <li>tabsNavigator</li>
+                  <br />
+                </ul>
+                </p>
+                <a class="mt-3 text-orange-500 inline-flex items-center"
+                  href="https://github.com/floriancomparato/">Voir
+                  le Code
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
   </section>
   <!--FOOTER SECTION-->
   <footer class="text-gray-500 bg-gray-800 body-font">
