--- a/index.html
+++ b/index.html
@@ -41,17 +41,18 @@
     <h2 class="text-center tracking-widest text-xl title-font font-medium text-white mb-1">MES COMPÉTENCES
     </h2>
 
-    <div class="container px-5 py-24 mx-auto">
+    <div class="container px-5 py-4 mx-auto">
       <div class="flex flex-wrap -mx-3 -my-8">
         <div class="py-8 px-4 lg:w-1/3">
           <div class="h-full flex items-start">
 
             <div class="flex-grow pl-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1">DÉVELOPPEMENT WEB</h2>
+              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1 ">DÉVELOPPEMENT
+                WEB</h2>
 
-              <p class="leading-relaxed mb-5">JavaScript <br> HTML 5 <br> CSS 3 <br> Git <br> UI/UX <br> Figma <br>
-                Méthode
-                Agile: Scrum (Trello, Slack, Discord)</p>
+              <p class="leading-relaxed mb-5 ">JavaScript <br> HTML 5 <br> CSS 3 <br> Git <br> UI/UX <br>
+                Figma <br>
+                Agilité: Scrum (Trello, Slack, Discord)</p>
 
             </div>
           </div>
@@ -60,10 +61,12 @@
           <div class="h-full flex items-start">
 
             <div class="flex-grow pl-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1">FRAMEWORKS / LIBRAIRIES
+              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1 ">FRAMEWORKS /
+                LIBRAIRIES
               </h2>
 
-              <p class="leading-relaxed mb-5">Reactjs / React-Native / Vue.js <br> jQuery <br> Ajax <br> Bootstrap <br>
+              <p class="leading-relaxed mb-5">Reactjs / React-Native / Vue.js <br> jQuery <br> Ajax <br>
+                Bootstrap <br>
                 Tailwindcss</p>
 
             </div>
@@ -73,9 +76,10 @@
           <div class="h-full flex items-start">
 
             <div class="flex-grow pl-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1">BACK-END</h2>
+              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1 ">BACK-END</h2>
 
-              <p class="leading-relaxed mb-5">Node.js <br> Express.js <br> MongoDB <br> Mongoose<br> API Rest</p>
+              <p class="leading-relaxed mb-5">Node.js <br> Express.js <br> MongoDB <br> Mongoose<br> API
+                Rest</p>
 
             </div>
           </div>
@@ -88,13 +92,12 @@
   </section>
   <!--REAL SECTION-->
   <section class="text-gray-500 bg-gray-900 body-font">
-    <div class="container px-5 py-24 mx-auto flex flex-wrap">
+    <div class="container px-5 py-4
+     mx-auto flex flex-wrap">
       <div class="flex flex-col text-center w-full mb-20">
         <h2 class="text-center tracking-widest text-xl title-font font-medium text-white mb-1">MES PROJETS
         </h2>
-        <br />
-        <br />
-        <br />
+
         <br />
         <div class="flex flex-wrap -m-4">
           <!--CARD 1-->
@@ -124,7 +127,7 @@
                 </ul>
                 </p>
                 <a class="mt-3 text-orange-500 inline-flex items-center"
-                  href="https://github.com/floriancomparato/">Voir
+                  href="https://github.com/floriancomparato/cannesisup-front">Voir
                   le Code
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -148,7 +151,7 @@
                 <h2 class="text-white text-lg title-font font-medium">TagHub</h2>
               </div>
               <div class="flex-grow">
-                <p class="leading-relaxed text-base">1ère Réalisation d'un mini réseau social: <br /><br />
+                <p class="leading-relaxed text-base">Réalisation d'un mini réseau social: <br /><br />
                   <hr />
                   <br />
                 <ul>
@@ -158,7 +161,7 @@
                 </ul>
                 </p>
                 <a class="mt-3 text-orange-500 inline-flex items-center"
-                  href="https://github.com/floriancomparato/">Voir
+                  href="https://github.com/floriancomparato/taghub-social">Voir
                   le Code
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -198,7 +201,7 @@
                 </ul>
                 </p>
                 <a class="mt-3 text-orange-500 inline-flex items-center"
-                  href="https://github.com/floriancomparato/">Voir
+                  href="https://github.com/floriancomparato/ReactNative-AndroidMobileApp-ProgrammingJokeApi">Voir
                   le Code
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     class="w-4 h-4 ml-2" viewBox="0 0 24 24">
