--- a/index.html
+++ b/index.html
@@ -37,182 +37,225 @@
   </section>
 
   <!--SKILLS SECTION-->
+
+
   <section class="text-gray-500 bg-gray-900 body-font">
-    <h2 class="text-center tracking-widest text-xl title-font font-medium text-white mb-1">MES COMPÉTENCES
-    </h2>
-
-    <div class="container px-5 py-4 mx-auto">
-      <div class="flex flex-wrap -mx-3 -my-8">
-        <div class="py-8 px-4 lg:w-1/3">
-          <div class="h-full flex items-start">
-
-            <div class="flex-grow pl-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1 ">DÉVELOPPEMENT
-                WEB</h2>
-
-              <p class="leading-relaxed mb-5 ">JavaScript <br> HTML 5 <br> CSS 3 <br> Git <br> UI/UX <br>
-                Figma <br>
-                Agilité: Scrum (Trello, Slack, Discord)</p>
-
-            </div>
-          </div>
-        </div>
-        <div class="py-8 px-4 lg:w-1/3">
-          <div class="h-full flex items-start">
-
-            <div class="flex-grow pl-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1 ">FRAMEWORKS /
-                LIBRAIRIES
-              </h2>
-
-              <p class="leading-relaxed mb-5">Reactjs / React-Native / Vue.js <br> jQuery <br> Ajax <br>
-                Bootstrap <br>
-                Tailwindcss</p>
-
-            </div>
-          </div>
-        </div>
-        <div class="py-8 px-4 lg:w-1/3">
-          <div class="h-full flex items-start">
-
-            <div class="flex-grow pl-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-orange-500 mb-1 ">BACK-END</h2>
-
-              <p class="leading-relaxed mb-5">Node.js <br> Express.js <br> MongoDB <br> Mongoose<br> API
-                Rest</p>
-
-            </div>
-          </div>
-        </div>
-
+    <div class="container px-5 py-4 mx-auto flex flex-wrap">
+      <div class="flex flex-col text-center w-full mb-20">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">MES COMPÉTENCES</h1>
       </div>
-    </div>
-    </div>
+      <div class="flex flex-wrap -m-4">
+        <!--CARD 1-->
+        <div class="p-4 md:w-1/3">
+          <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+            <div class="flex items-center mb-3">
+              <div
+                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                  <path d="M0 0h24v24H0V0z" fill="none" />
+                  <path
+                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z" />
+                </svg>
+              </div>
+              <h2 class="text-white text-lg title-font font-medium">DÉVELOPPEMENT
+                WEB</h2>
+            </div>
+            <div class="flex-grow">
+
+              <ul>
+                <li>JavaScript</li>
+                <li> HTML 5 </li>
+                <li> CSS 3 </li>
+                <li> Git</li>
+                <li> UI/UX </li>
+                <li> Figma</li>
+                <li>Agilité: Scrum (Trello, Slack, Discord)</li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+        <!--CARD 2-->
+        <div class="p-4 md:w-1/3">
+          <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+            <div class="flex items-center mb-3">
+              <div
+                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                  <path d="M0 0h24v24H0V0z" fill="none" />
+                  <path
+                    d="M8.7 15.9L4.8 12l3.9-3.9c.39-.39.39-1.01 0-1.4-.39-.39-1.01-.39-1.4 0l-4.59 4.59c-.39.39-.39 1.02 0 1.41l4.59 4.6c.39.39 1.01.39 1.4 0 .39-.39.39-1.01 0-1.4zm6.6 0l3.9-3.9-3.9-3.9c-.39-.39-.39-1.01 0-1.4.39-.39 1.01-.39 1.4 0l4.59 4.59c.39.39.39 1.02 0 1.41l-4.59 4.6c-.39.39-1.01.39-1.4 0-.39-.39-.39-1.01 0-1.4z" />
+                </svg>
+              </div>
+              <h2 class="text-white text-lg title-font font-medium">FRAMEWORKS / LIBRAIRIES</h2>
+            </div>
+            <div class="flex-grow">
+              <ul>
+                <li>Reactjs / React-Native / Vue.js</li>
+                <li>jQuery </li>
+                <li> Ajax </li>
+                <li> JSX</li>
+                <li> Bootstrap </li>
+                <li> Tailwindcss</li>
+
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!--CARD 3-->
+        <div class="p-4 md:w-1/3">
+          <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+            <div class="flex items-center mb-3">
+              <div
+                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                  <path d="M0 0h24v24H0V0z" fill="none" />
+                  <path
+                    d="M19 13H5c-1.1 0-2 .9-2 2v4c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-4c0-1.1-.9-2-2-2zM7 19c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zM19 3H5c-1.1 0-2 .9-2 2v4c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM7 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z" />
+                </svg>
+              </div>
+              <h2 class="text-white text-lg title-font font-medium">BACK-END
+              </h2>
+            </div>
+            <div class="flex-grow">
+              <ul>
+                <li>Node.js</li>
+                <li>Express.js </li>
+                <li> MongoDB </li>
+                <li>Mongo Atlas</li>
+                <li> Mongoose</li>
+                <li> API Rest </li>
+                <li>Postman</li>
+
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!--REAL SECTION-->
   <section class="text-gray-500 bg-gray-900 body-font">
-    <div class="container px-5 py-4
-     mx-auto flex flex-wrap">
+    <div class="container px-5 py-4 mx-auto flex flex-wrap">
       <div class="flex flex-col text-center w-full mb-20">
-        <h2 class="text-center tracking-widest text-xl title-font font-medium text-white mb-1">MES PROJETS
-        </h2>
-
-        <br />
-        <div class="flex flex-wrap -m-4">
-          <!--CARD 1-->
-          <div class="p-4 md:w-1/3">
-            <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
-              <div class="flex items-center mb-3">
-                <div
-                  class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-                    <path d="M0 0h24v24H0V0z" fill="none" />
-                    <path
-                      d="M4 7c0-.55.45-1 1-1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-1.1 0-2 .9-2 2v11h-.5c-.83 0-1.5.67-1.5 1.5S.67 20 1.5 20H14v-3H4V7zm19 1h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z" />
-                  </svg>
-                </div>
-                <h2 class="text-white text-lg title-font font-medium">Cannes is up</h2>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">MES PROJETS</h1>
+      </div>
+      <div class="flex flex-wrap -m-4">
+        <!--CARD 1-->
+        <div class="p-4 md:w-1/3">
+          <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+            <div class="flex items-center mb-3">
+              <div
+                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                  <path d="M0 0h24v24H0V0z" fill="none" />
+                  <path
+                    d="M4 7c0-.55.45-1 1-1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-1.1 0-2 .9-2 2v11h-.5c-.83 0-1.5.67-1.5 1.5S.67 20 1.5 20H14v-3H4V7zm19 1h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z" />
+                </svg>
               </div>
-              <div class="flex-grow">
-                <p class="leading-relaxed text-base">Réalisation en 3 sprints d'un annuaire d'adhérents avec Searchbar,
-                  Formulaire d'adhésion, Login & Back-office pour l'association CANNESISUP: <br /><br />
-                  <hr />
-                  <br />
-                <ul>
-                  <li>Méthode Agile: Scrum</li> <br />
-                  <li>Stack: MERN</li> <br />
-                  <li>Bcrypt / JWT / Multer / Nodemailer / React-Bootstrap</li>
-                  <br />
-                </ul>
-                </p>
-                <a class="mt-3 text-orange-500 inline-flex items-center"
-                  href="https://github.com/floriancomparato/cannesisup-front">Voir
-                  le Code
-                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
-              </div>
+              <h2 class="text-white text-lg title-font font-medium">Cannes is up</h2>
+            </div>
+            <div class="flex-grow">
+              <p class="leading-relaxed text-base">Réalisation en 3 sprints d'un annuaire d'adhérents avec
+                Searchbar,
+                Formulaire d'adhésion, Login & Back-office pour l'association CANNESISUP: <br /><br />
+                <hr />
+                <br />
+              <ul>
+                <li>Méthode Agile: Scrum</li> <br />
+                <li>Stack: MERN</li> <br />
+                <li>Bcrypt / JWT / Multer / Nodemailer / React-Bootstrap</li>
+                <br />
+              </ul>
+              </p>
+              <a class="mt-3 text-orange-500 inline-flex items-center"
+                href="https://github.com/floriancomparato/cannesisup-front">Voir
+                le Code
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                  <path d="M5 12h14M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
             </div>
           </div>
-          <!--CARD 2-->
-          <div class="p-4 md:w-1/3">
-            <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
-              <div class="flex items-center mb-3">
-                <div
-                  class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-                    <path
-                      d="M21 2H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h7v2H9c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1h-1v-2h7c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 14H4c-.55 0-1-.45-1-1V5c0-.55.45-1 1-1h16c.55 0 1 .45 1 1v10c0 .55-.45 1-1 1z" />
-                  </svg>
-                </div>
-                <h2 class="text-white text-lg title-font font-medium">TagHub</h2>
+        </div>
+        <!--CARD 2-->
+        <div class="p-4 md:w-1/3">
+          <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+            <div class="flex items-center mb-3">
+              <div
+                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                  <path
+                    d="M21 2H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h7v2H9c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1h-1v-2h7c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 14H4c-.55 0-1-.45-1-1V5c0-.55.45-1 1-1h16c.55 0 1 .45 1 1v10c0 .55-.45 1-1 1z" />
+                </svg>
               </div>
-              <div class="flex-grow">
-                <p class="leading-relaxed text-base">Réalisation d'un mini réseau social: <br /><br />
-                  <hr />
-                  <br />
-                <ul>
-                  <li>Stack: MERN</li> <br />
-                  <li>React-Bootstrap</li>
-                  <br />
-                </ul>
-                </p>
-                <a class="mt-3 text-orange-500 inline-flex items-center"
-                  href="https://github.com/floriancomparato/taghub-social">Voir
-                  le Code
-                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
-              </div>
+              <h2 class="text-white text-lg title-font font-medium">TagHub</h2>
+            </div>
+            <div class="flex-grow">
+              <p class="leading-relaxed text-base">Réalisation d'un mini réseau social: <br /><br />
+                <hr />
+                <br />
+              <ul>
+                <li>Stack: MERN</li> <br />
+                <li>React-Bootstrap</li>
+                <br />
+              </ul>
+              </p>
+              <a class="mt-3 text-orange-500 inline-flex items-center"
+                href="https://github.com/floriancomparato/taghub-social">Voir
+                le Code
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                  <path d="M5 12h14M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
             </div>
           </div>
-          <!--CARD 3-->
-          <div class="p-4 md:w-1/3">
-            <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
-              <div class="flex items-center mb-3">
-                <div
-                  class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-                    <path d="M0 0h24v24H0V0z" fill="none" />
-                    <path
-                      d="M17 1.01L7 1c-1.1 0-1.99.9-1.99 2v18c0 1.1.89 2 1.99 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z" />
-                  </svg>
-                </div>
-                <h2 class="text-white text-lg title-font font-medium">Give me a &lt;br &frasl;&gt;
-                </h2>
+        </div>
+        <!--CARD 3-->
+        <div class="p-4 md:w-1/3">
+          <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
+            <div class="flex items-center mb-3">
+              <div
+                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-orange-500 text-white flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                  <path d="M0 0h24v24H0V0z" fill="none" />
+                  <path
+                    d="M17 1.01L7 1c-1.1 0-1.99.9-1.99 2v18c0 1.1.89 2 1.99 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z" />
+                </svg>
               </div>
-              <div class="flex-grow">
-                <p class="leading-relaxed text-base">Réalisation en 2 jours d'une application mobile React-native de
-                  blagues de développeurs: <br /><br />
-                  <hr />
-                  <br />
-                <ul>
-                  <li>React-native</li><br />
-                  <li>Requêtes vers une API web (JokeAPI)</li><br />
-                  <li>Soumettre des blagues à l'API</li><br />
-                  <li>Splashscreen</li><br />
-                  <li>tabsNavigator</li>
-                  <br />
-                </ul>
-                </p>
-                <a class="mt-3 text-orange-500 inline-flex items-center"
-                  href="https://github.com/floriancomparato/ReactNative-AndroidMobileApp-ProgrammingJokeApi">Voir
-                  le Code
-                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
-              </div>
+              <h2 class="text-white text-lg title-font font-medium">Give me a &lt;br &frasl;&gt;
+              </h2>
+            </div>
+            <div class="flex-grow">
+              <p class="leading-relaxed text-base">Réalisation en 2 jours d'une application mobile React-native de
+                blagues de développeurs: <br /><br />
+                <hr />
+                <br />
+              <ul>
+                <li>React-native</li><br />
+                <li>Requêtes vers une API web (JokeAPI)</li><br />
+                <li>Soumettre des blagues à l'API</li><br />
+                <li>Splashscreen</li><br />
+                <li>tabsNavigator</li>
+                <br />
+              </ul>
+              </p>
+              <a class="mt-3 text-orange-500 inline-flex items-center"
+                href="https://github.com/floriancomparato/ReactNative-AndroidMobileApp-ProgrammingJokeApi">Voir
+                le Code
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                  <path d="M5 12h14M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
             </div>
           </div>
         </div>
       </div>
+    </div>
   </section>
   <!--FOOTER SECTION-->
   <footer class="text-gray-500 bg-gray-800 body-font">
