modification bg skills and img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <!--HERO SECTION-->
-  <section class="text-gray-500 bg-gray-900 body-font">
+  <section class="text-gray-500 bg-blue-900 body-font">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div
         class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
@@ -18,7 +18,9 @@
           <br class="hidden lg:inline-block"> Fullstack JavaScript
         </h1>
         <p class="mb-8 leading-relaxed">
-          <br> Diplomé d'un bootcamp 100% JavaScript,<br /> en apprentissage constant & <br /> passionné de nouvelles
+          <br> Ex Chargé de Post-Production TV / <br> Diplomé d'un bootcamp 100% JavaScript,<br /> en apprentissage
+          constant
+          & <br /> passionné de nouvelles
           technologies.</p>
         <div class="flex justify-center">
 
@@ -31,15 +33,14 @@
         </div>
       </div>
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-        <img class="object-cover object-center rounded" alt="hero" src="undraw_personal_site_xyd1.svg">
+        <img class="object-cover object-center rounded" alt="hero" src="undraw_code_thinking_1jeh.svg">
       </div>
     </div>
   </section>
-
   <!--SKILLS SECTION-->
 
 
-  <section class="text-gray-500 bg-gray-900 body-font">
+  <section class="text-gray-500 bg-blue-900 body-font">
     <div class="container px-5 py-4 mx-auto flex flex-wrap">
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">MES COMPÉTENCES</h1>
@@ -64,11 +65,10 @@
 
               <ul>
                 <li>JavaScript</li>
-                <li> HTML 5 </li>
-                <li> CSS 3 </li>
+                <li> HTML</li>
+                <li> CSS</li>
                 <li> Git</li>
-                <li> UI/UX </li>
-                <li> Figma</li>
+                <li> UI/UX: Figma, The GIMP </li>
                 <li>Agilité: Scrum (Trello, Slack, Discord)</li>
               </ul>
 
@@ -91,12 +91,13 @@
             </div>
             <div class="flex-grow">
               <ul>
-                <li>Reactjs / React-Native / Vue.js</li>
+                <li>Reactjs / React-Native</li>
                 <li>jQuery </li>
                 <li> Ajax </li>
                 <li> JSX</li>
                 <li> Bootstrap </li>
                 <li> Tailwindcss</li>
+                <li> Wordpress</li>
 
               </ul>
             </div>
@@ -125,6 +126,8 @@
                 <li>Mongo Atlas</li>
                 <li> Mongoose</li>
                 <li> API Rest </li>
+                <li>Bcrypt / JWT / Multer</li>
+                <li>Nodemailer</li>
                 <li>Postman</li>
 
 
@@ -135,8 +138,9 @@
       </div>
     </div>
   </section>
+
   <!--REAL SECTION-->
-  <section class="text-gray-500 bg-gray-900 body-font">
+  <section class="text-gray-500 bg-blue-900 body-font">
     <div class="container px-5 py-4 mx-auto flex flex-wrap">
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">MES PROJETS</h1>
@@ -154,7 +158,7 @@
                     d="M4 7c0-.55.45-1 1-1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-1.1 0-2 .9-2 2v11h-.5c-.83 0-1.5.67-1.5 1.5S.67 20 1.5 20H14v-3H4V7zm19 1h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z" />
                 </svg>
               </div>
-              <h2 class="text-white text-lg title-font font-medium">Cannes is up</h2>
+              <h2 class="text-white text-lg title-font font-medium">"Cannes is up"</h2>
             </div>
             <div class="flex-grow">
               <p class="leading-relaxed text-base">Réalisation en 3 sprints d'un annuaire d'adhérents avec
@@ -180,6 +184,7 @@
             </div>
           </div>
         </div>
+        <hr>
         <!--CARD 2-->
         <div class="p-4 md:w-1/3">
           <div class="flex rounded-lg h-full bg-gray-800 p-8 flex-col">
@@ -191,7 +196,7 @@
                     d="M21 2H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h7v2H9c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1h-1v-2h7c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 14H4c-.55 0-1-.45-1-1V5c0-.55.45-1 1-1h16c.55 0 1 .45 1 1v10c0 .55-.45 1-1 1z" />
                 </svg>
               </div>
-              <h2 class="text-white text-lg title-font font-medium">TagHub</h2>
+              <h2 class="text-white text-lg title-font font-medium">"TagHub"</h2>
             </div>
             <div class="flex-grow">
               <p class="leading-relaxed text-base">Réalisation d'un mini réseau social: <br /><br />
@@ -226,7 +231,7 @@
                     d="M17 1.01L7 1c-1.1 0-1.99.9-1.99 2v18c0 1.1.89 2 1.99 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z" />
                 </svg>
               </div>
-              <h2 class="text-white text-lg title-font font-medium">Give me a &lt;br &frasl;&gt;
+              <h2 class="text-white text-lg title-font font-medium">"Give me a &lt;br &frasl;&gt;"
               </h2>
             </div>
             <div class="flex-grow">
