--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div
         class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Développeur Web
-          <br class="hidden lg:inline-block"> Fullstack JavaScript
+          <br class="hidden lg:inline-block"> Fullstack
         </h1>
         <p class="mb-8 leading-relaxed">
           <br> Ex Chargé de Post-Production TV / <br> Diplomé d'un bootcamp 100% JavaScript,<br /> en apprentissage
@@ -67,9 +67,11 @@
                 <li>JavaScript</li>
                 <li> HTML</li>
                 <li> CSS</li>
+                <li> PHP</li>
                 <li> Git</li>
                 <li> UI/UX: Figma, The GIMP </li>
                 <li>Agilité: Scrum (Trello, Slack, Discord)</li>
+                <li> OPQUAST (examen 09/2020)</li>
               </ul>
 
             </div>
@@ -91,7 +93,7 @@
             </div>
             <div class="flex-grow">
               <ul>
-                <li>Reactjs / React-Native</li>
+                <li>Reactjs / React-Native / Vuejs</li>
                 <li>jQuery </li>
                 <li> Ajax </li>
                 <li> JSX</li>
@@ -122,7 +124,7 @@
               <ul>
                 <li>Node.js</li>
                 <li>Express.js </li>
-                <li> MongoDB </li>
+                <li> MongoDB / MySQL </li>
                 <li>Mongo Atlas</li>
                 <li> Mongoose</li>
                 <li> API Rest </li>
