--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
                 <li> CSS</li>
                 <li> PHP</li>
                 <li> Git</li>
-                <li> UI/UX: Figma, The GIMP </li>
-                <li>Agilité: Scrum (Trello, Slack, Discord)</li>
-                <li> OPQUAST (examen 09/2020)</li>
+                <li> OPQUAST / Agilité / UI/UX</li>
               </ul>
 
             </div>
@@ -93,10 +91,8 @@
             </div>
             <div class="flex-grow">
               <ul>
-                <li>Reactjs / React-Native / Vuejs</li>
-                <li>jQuery </li>
-                <li> Ajax </li>
-                <li> JSX</li>
+                <li>Reactjs / React-Native / Vuejs / Symfony</li>
+                <li>jQuery / Ajax / JSX / Twig / Doctrine </li>
                 <li> Bootstrap </li>
                 <li> Tailwindcss</li>
                 <li> Wordpress</li>
