--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
             </div>
             <div class="flex-grow">
               <ul>
-                <li>Reactjs / React-Native / Vuejs / Symfony</li>
-                <li>jQuery / Ajax / JSX / Twig / Doctrine </li>
+                <li>Reactjs / React-Native / Vuejs </li>
+                <li>Symfony</li>
+                <li>jQuery / Ajax / JSX / Twig </li>
                 <li> Bootstrap </li>
                 <li> Tailwindcss</li>
                 <li> Wordpress</li>
