--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Florian Comparato Portfolio</title>
+  <title>Florian Comparato : Web | TV | Informatique | Numérique</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
@@ -14,8 +14,8 @@
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div
         class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Développeur Web
-          <br class="hidden lg:inline-block"> Fullstack
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Développeur Web | Référent informatique / Numérique
+          <br class="hidden lg:inline-block">
         </h1>
         <p class="mb-8 leading-relaxed">
           <br> Ex Chargé de Post-Production TV / <br> Diplomé d'un bootcamp 100% JavaScript,<br /> en apprentissage
